# farmtracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
farmtracker/: __init__.py  bot.py  models.py  store.py
joblin/: trinkets.py
joblin/bot/: commands.py  listing.py  scoring.py
tests/: smoke.py
